[package]
name = "search-completion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
hf-hub = "0.3.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
serde_json = "1.0.132"
tokenizers = "0.20.2"
